# osgdbIGES

./: CMakeLists.txt  README.md
src/: BRepConverter.cpp  BRepConverter.h  ReaderWriterIGES.cpp  ReaderWriterIGES.h  osgocc.cpp  osgocc.h
